# aind-tars-service

./: README.md  openapirc.json  openapirc_async.json
.github/workflows/: init.yml  tag_and_publish.yml
aind-service-template-server/: Dockerfile  pyproject.toml
aind-service-template-server/src/aind_service_template_server/: handler.py  main.py  models.py  route.py  session.py
aind-service-template-server/tests/: conftest.py  test_configs.py  test_handler.py  test_models.py  test_session.py
aind-tars-service-async-client/: README.md  pyproject.toml  setup.py  tox.ini
aind-tars-service-async-client/.openapi-generator/: FILES
aind-tars-service-async-client/aind_tars_service_async_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
aind-tars-service-async-client/aind_tars_service_async_client/api/: default_api.py  healthcheck_api.py
aind-tars-service-async-client/aind_tars_service_async_client/models/: __init__.py  alias.py  health_check.py  http_validation_error.py  molecule_data.py  molecule_type.py  prep_lot_data.py  species.py  targeted_cell_population.py  titers.py  validation_error.py  validation_error_loc_inner.py  viral_prep.py  viral_prep_type.py  virus_data.py
aind-tars-service-async-client/docs/: Alias.md  DefaultApi.md  HTTPValidationError.md  HealthCheck.md  HealthcheckApi.md  MoleculeData.md  MoleculeType.md  PrepLotData.md  Species.md  TargetedCellPopulation.md  TargetedRoi.md  Titers.md  ValidationError.md  ValidationErrorLocInner.md  ViralPrep.md  ViralPrepType.md  VirusData.md
aind-tars-service-async-client/test/: test_alias.py  test_default_api.py  test_health_check.py  test_healthcheck_api.py  test_http_validation_error.py  test_molecule_data.py  test_molecule_type.py  test_prep_lot_data.py  test_species.py  test_targeted_cell_population.py  test_targeted_roi.py  test_titers.py  test_validation_error.py  test_validation_error_loc_inner.py  test_viral_prep.py  test_viral_prep_type.py  test_virus_data.py
aind-tars-service-client/: README.md  pyproject.toml  setup.py  tox.ini
aind-tars-service-client/.openapi-generator/: FILES
aind-tars-service-client/aind_tars_service_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
aind-tars-service-client/aind_tars_service_client/api/: default_api.py  healthcheck_api.py
aind-tars-service-client/aind_tars_service_client/models/: __init__.py  alias.py  (+14 more)
aind-tars-service-client/docs/: Alias.md  DefaultApi.md  HTTPValidationError.md  HealthCheck.md  HealthcheckApi.md  MoleculeData.md  MoleculeType.md  PrepLotData.md  Species.md  TargetedCellPopulation.md  TargetedRoi.md  Titers.md  ValidationError.md  ValidationErrorLocInner.md  ViralPrep.md  ViralPrepType.md  VirusData.md
aind-tars-service-client/test/: test_alias.py  test_default_api.py  test_health_check.py  test_healthcheck_api.py  test_http_validation_error.py  test_molecule_data.py  test_molecule_type.py  test_prep_lot_data.py  test_species.py  test_targeted_cell_population.py  test_targeted_roi.py  test_titers.py  test_validation_error.py  test_validation_error_loc_inner.py  test_viral_prep.py  test_viral_prep_type.py  test_virus_data.py
aind-tars-service-server/: Dockerfile  README.md  log_config_template.yaml  pyproject.toml
aind-tars-service-server/src/aind_tars_service_server/: __init__.py  configs.py  handler.py  main.py  models.py  route.py  session.py
aind-tars-service-server/tests/: conftest.py  test_configs.py  test_handler.py  test_main.py  test_models.py  test_route.py  test_session.py
aind-tars-service-server/tests/resources/: molecule_response.json  prep_lot_response.json  prep_lot_response1.json  prep_lot_response2.json  raw_virus_response.json  virus_response.json
scripts/: generate_openapi.py
workflow_templates/: tag_and_publish.yml  test_server.yml
